--- a/assets/css/dimatis.css
+++ b/assets/css/dimatis.css
@@ -232,3 +232,9 @@ a:hover {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
+.credits p {
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
